# container_runtime_development_snowflake

./: .gitignore  .pre-commit-config.yaml  README.md
.snowflake/cortex/plans/: add-snowflake-gitignore.plan.md  snowflake-ml-accelerator-project.plan.md
examples/: 01_hello_world.py  02_gpu_embedding.py  04_remote_dev_setup.py  train.py
snowflake-ml-accelerator/: .gitignore  pyproject.toml
snowflake-ml-accelerator/examples/: 03_submit_directory.py
snowflake-ml-accelerator/src/sfml/jobs/: status.py  submit.py
snowflake-ml-accelerator/src/sfml/remote/: teardown.py
snowflake-ml-accelerator/tests/: test_integration.py
src/sfml/: __init__.py  config.py  session.py
src/sfml/jobs/: __init__.py
src/sfml/remote/: __init__.py  connect.py  disconnect.py  setup.py
tests/: test_full_integration.py  test_simple.py
